2013-07-22  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* sysdeps/s390/fpu/libm-test-ulps: Refresh.

2013-07-21  Siddhesh Poyarekar  <siddhesh@redhat.com>
	    Andreas Schwab  <schwab@suse.de>
	    Roland McGrath  <roland@hack.frob.com>
	    Joseph Myers  <joseph@codesourcery.com>
	    Carlos O'Donell  <carlos@redhat.com>

	[BZ #15755]
	* config.h.in: Define HAVE_PT_CHOWN.
	* config.make.in (build-pt-chown): New variable.
	* configure.in (--enable-pt_chown): New configure option.
	* configure: Regenerate.
	* login/Makefile: Include Makeconfig.  Build pt_chown only if
	build-pt-chown is enabled.
	* sysdeps/unix/grantpt.c (grantpt) [HAVE_PT_CHOWN]: Spawn
	pt_chown to fix pty ownership.
	* sysdeps/unix/sysv/linux/grantpt.c [HAVE_PT_CHOWN]: Define
	CLOSE_ALL_FDS.
	* manual/install.texi (Configuring and compiling): Mention
	--enable-pt_chown. Add @findex for grantpt.
	* INSTALL: Regenerate.

2013-07-20  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/fpu/libm-test-ulps: Update ULPs to handle minor
	difference between 32-bit and 64-bit.

2013-07-15  Carlos O'Donell  <carlos@redhat.com>

	[BZ #15711]
	* sysdeps/unix/sysv/linux/Makefile ($(objpfx)bits/syscall%h):
	Avoid system header dependency with -ffreestanding.
	($(objpfx)bits/syscall%d): Likewise.

2013-07-13  David S. Miller  <davem@davemloft.net>

	* math/libm-test.inc (casin_test_data): Annotate more cases of missing
	underflows from atanl/atan2l due to bug 15319.
	(casinh_test_data): Likewise.

2013-07-07  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/fpu/libm-test-ulps: Regenerate from scratch.

2013-07-05  Jeroen Albers  <_jeroen_@yahoo.com>

	* sysdeps/i386/fpu/libm-test-ulps: Update.
	* sysdeps/x86_64/fpu/libm-test-ulps: Likewise.

2013-07-04  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* configure.in (--enable-lock-elision): Fix message text.
	* INSTALL: Regenerate.
	* configure: Regenerate.

2013-07-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
