@@ -1,3 +1,11 @@
+2013-07-23  David S. Miller  <davem@davemloft.net>
+
+	* tst-cancel4.c (WRITE_BUFFER_SIZE): Adjust comment.
+
+2013-07-22  David S. Miller  <davem@davemloft.net>
+
+	* tst-cancel4.c (WRITE_BUFFER_SIZE): Increase to 16384.
+
 2013-07-19  Dominik Vogt  <vogt@de.ibm.com>
 
 	* pthread_mutex_lock.c: Fix whitespace.
